@@ -2,6 +2,7 @@ todoyu sysmanager extension changelog
 
 sysmanager 1.1.3 - not released yet
 	* Translation: Polish
+	* Set record id, and change id to zero for new record (instead of -1, which breaks clean field naming)
 
 sysmanager 1.1.2 - 2011-09-15
 	* Added: Items amount in records listing
